[package]
name = "integeriser"
version = "0.2.0"
authors = ["Tobias Denkinger <tobias.denkinger@tu-dresden.de>"]
license = "bsd-3-clause"
description = "Data-structures that represent values by unique integers."
repository = "https://github.com/tud-fop/rust-integeriser"

[dependencies]
serde = { version = "1.0", optional = true }
fnv = { version = "*", optional = true }

[features]
fnv-hashintegeriser = ["fnv"]
serialisation = ["serde"]